<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.colors.ColorPinkFragment">

    <LinearLayout
        android:id="@+id/LinearLayoutToolbarPink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_toolbar">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_left">

                <TextView
                    style="@style/HomeToolBarTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/text_title_toolbar_pink_fragment" />

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutElementsPink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayoutToolbarPink">

        <TextView
            android:id="@+id/tvBarbiePink"
            style="@style/ColorsWhiteGenericTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@color/barbie_pink"
            android:text="@string/text_barbie_pink"/>

        <TextView
            android:id="@+id/tvMagenta"
            style="@style/ColorsWhiteGenericTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@color/magenta"
            android:text="@string/text_magenta"/>

        <TextView
            android:id="@+id/tvShockingPink"
            style="@style/ColorsWhiteGenericTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@color/shocking_pink"
            android:text="@string/text_shocking_pink"/>

        <TextView
            android:id="@+id/tvFandango"
            style="@style/ColorsWhiteGenericTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@color/fandango"
            android:text="@string/text_fandango"/>

        <TextView
            android:id="@+id/tvFuchsia"
            style="@style/ColorsWhiteGenericTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@color/fuchsia"
            android:text="@string/text_fuchsia"/>

        <TextView
            android:id="@+id/tvLightDeepPink"
            style="@style/ColorsWhiteGenericTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@color/light_deep_pink"
            android:text="@string/text_light_deep_pink"/>

        <TextView
            android:id="@+id/tvRouge"
            style="@style/ColorsWhiteGenericTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@color/rouge"
            android:text="@string/text_rouge"/>

        <TextView
            android:id="@+id/tvMulberry"
            style="@style/ColorsWhiteGenericTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@color/mulberry"
            android:text="@string/text_mulberry"/>

        <TextView
            android:id="@+id/tvHotPink"
            style="@style/ColorsBlackGenericTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@color/hot_pink"
            android:text="@string/text_hot_pink"/>

        <TextView
            android:id="@+id/tvNeonPink"
            style="@style/ColorsBlackGenericTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@color/neon_pink"
            android:text="@string/text_neon_pink"/>

        <TextView
            android:id="@+id/tvWildOrchid"
            style="@style/ColorsWhiteGenericTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@color/wild_orchid"
            android:text="@string/text_wild_orchid"/>

        <TextView
            android:id="@+id/tvLavenderRose"
            style="@style/ColorsBlackGenericTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@color/lavender_rose"
            android:text="@string/text_lavender_rose"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>